Principled hair BSDF shading incorrect when input is connected #93102

Closed
opened 2021-11-15 19:58:37 +01:00 by Maurice Laveaux · 9 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.49

Blender Version
Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-11-11 18:49, hash: bd734cc441 (and master 2021-11-15 hash: 7e82c840b7a43b0594ba274c745f3049e0148d12)
Worked: 2.93.5

Short description of error
For the principle hair BSDF there is a difference between filling in the "Melanin" input in the node itself and connecting this input to another node with the same value; see the screenshots below. This also happens for the "Melanin Redness" and "Coat" inputs. The issue is also present for CPU renders.

Exact steps for others to reproduce the error

  1. Open the attached blend file; steps performed:
  2. Add a particle hair system to the default cube.
  3. Switch render engine to cycles with GPU.
  4. Add a principle hair BSDF with melanin concentration.
  5. Add a value node with value 0.8 and connect it to melanin input
  6. Switch to the cycles preview.
  7. Notice that some particles are blue, whereas with the value node disconnected all particles are dark brown as expected.

principled_hair_bsdf_issue.blend

Expected: expected.png

Problem: problem.png

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.49 **Blender Version** Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-11-11 18:49, hash: `bd734cc441` (and master 2021-11-15 hash: `7e82c840b7a43b0594ba274c745f3049e0148d12`) Worked: 2.93.5 **Short description of error** For the principle hair BSDF there is a difference between filling in the "Melanin" input in the node itself and connecting this input to another node with the same value; see the screenshots below. This also happens for the "Melanin Redness" and "Coat" inputs. The issue is also present for CPU renders. **Exact steps for others to reproduce the error** 1. Open the attached blend file; steps performed: 1. Add a particle hair system to the default cube. 2. Switch render engine to cycles with GPU. 3. Add a principle hair BSDF with melanin concentration. 4. Add a value node with value 0.8 and connect it to melanin input 2. Switch to the cycles preview. 3. Notice that some particles are blue, whereas with the value node disconnected all particles are dark brown as expected. [principled_hair_bsdf_issue.blend](https://archive.blender.org/developer/F11810564/principled_hair_bsdf_issue.blend) Expected: ![expected.png](https://archive.blender.org/developer/F11810601/expected.png) Problem: ![problem.png](https://archive.blender.org/developer/F11810599/problem.png)

Added subscriber: @mlaveaux

Added subscriber: @mlaveaux
Maurice Laveaux changed title from Principled hair BSFW shading incorrect when input are connected to Principled hair BSDF shading incorrect when input are connected 2021-11-15 19:58:47 +01:00
Maurice Laveaux changed title from Principled hair BSDF shading incorrect when input are connected to Principled hair BSDF shading incorrect when input is connected 2021-11-15 19:58:56 +01:00
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @leesonw

Added subscriber: @leesonw
Member

I ran from debug mode and got the following assert P2599 and I added a call stack.

I ran from debug mode and got the following assert [P2599](https://archive.blender.org/developer/P2599.txt) and I added a call stack.
William Leeson self-assigned this 2021-11-17 10:10:33 +01:00

This issue was referenced by blender/cycles@3ef618eb5f

This issue was referenced by blender/cycles@3ef618eb5f8c54b1e7e96284292a588b070735b2

This issue was referenced by 8c0370ef7b

This issue was referenced by 8c0370ef7b8d2854ca6eac8f57c626bb3c4b2f2b
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

This issue was referenced by e1a3b697ec

This issue was referenced by e1a3b697ec03d20207ee0c1fef6f816cb7856961
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93102
No description provided.